Prevent page indicators from interfering with firstheading and causing overflow

--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -143,6 +143,13 @@
 	}
 }
 
+/* Page header */
+
+h1.firstHeading {
+	/* Prevent indicators from interfering with title and causing overflow */
+	clear: right;
+}
+
 /* Page actions */
 
 #p-namespaces li {
